--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,6 +46,10 @@ main h1 {
       color: #E30641;
   }
 
+  .float-md-start {
+    margin-left: 2%;
+  }
+
 
 /*EVENTS*/
 .events-main {
@@ -69,18 +73,41 @@ main h1 {
 /*DISCOVER MORE*/
 .discover {
   text-align: center;
-  margin-top: 8%;
+  margin-top: 3%;
 }
 
 .discover p {
   color: #0A2F43; 
-  font-size: 24px;
+  font-size: 40px;
+  margin-right: 30%;
+  padding-bottom: 2%;
+  font-family: karla;
 }
 
 .discover h1 {
-  font-size: 60px;
+  font-size: 95px;
   color: #0A2F43;
+  font-family: karla;
 }
+
+.discover .discover-people {
+  margin-right: 60%;
+  padding-bottom: 3%;
+  margin: 0%;
+}
+
+.discover .discover-events {
+  margin-left: 20%;
+}
+
+.cover-container .robot {
+  margin-top: -5%;
+}
+
+.discover .btn {
+  font-size: 27px;
+}
+
 
 
 /*CONTACT FORM */
