--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,6 +116,103 @@ main h1 {
 }
 
 
+/*ABOUT*/
+
+.about-heading1 h1, .about-heading2 h1, .about-heading3 h1, .about-heading4 h1{
+  font-family: karla;
+  font-size: 100px;
+  font-weight: 600;
+  color: #0A2F43;
+}
+
+.about-heading1 h1, .about-heading3 h1{
+  margin-top: -15%;
+  margin-left: 50%;
+  padding-bottom: -10%;
+}
+
+.about-heading2 h1, .about-heading4 h1{
+  margin-left: 10%;
+}
+
+.about-heading1 img, .about-heading2 img, .about-heading3 img, .about-heading4 img {
+  object-fit: cover; 
+  height:60%;
+  width: 100%;
+}
+
+.text1 {
+  text-align: center;
+  font-size: 80px;
+  font-family: karla;
+  letter-spacing: 5px;
+  line-height: 130px;
+  margin-top: -10%;
+  margin-bottom: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+.text2 {
+  text-align: center;
+  font-size: 20px;
+  font-family: karla;
+  letter-spacing: 5px;
+  line-height: 130px;
+  margin-top: -10%;
+  margin-bottom: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+
+.text3 {
+  text-align: center;
+  font-size: 80px;
+  font-family: karla;
+  letter-spacing: 5px;
+  line-height: 130px;
+  margin-top: -10%;
+  margin-bottom: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+
+.text4 {
+  text-align: center;
+  font-size: 80px;
+  font-family: karla;
+  letter-spacing: 5px;
+  line-height: 130px;
+  margin-top: -10%;
+  margin-bottom: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*CONTACT FORM */
 .card {
   padding: 15%;
