--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,6 +122,7 @@ main h1 {
   font-family: karla;
   font-size: 100px;
   font-weight: 600;
+  letter-spacing: 4px;
   color: #0A2F43;
 }
 
@@ -137,56 +138,65 @@ main h1 {
 
 .about-heading1 img, .about-heading2 img, .about-heading3 img, .about-heading4 img {
   object-fit: cover; 
-  height:60%;
+  height:72%;
   width: 100%;
 }
 
 .text1 {
   text-align: center;
-  font-size: 80px;
+  font-size: 50px;
   font-family: karla;
   letter-spacing: 5px;
   line-height: 130px;
   margin-top: -10%;
-  margin-bottom: 10%;
+  margin-bottom: 12%;
   margin-left: 5%;
   margin-right: 5%;
   padding-left: 2px;
   padding-right: 2px;
+  padding-top: 5%;
+  padding-bottom: 8%;
 }
 
 .text2 {
   text-align: center;
-  font-size: 20px;
+  font-size: 45px;
   font-family: karla;
   letter-spacing: 5px;
-  line-height: 50px;
-  margin-top: -10%;
+  line-height: 110px;
+  margin-top: -5%;
   margin-bottom: 30%; 
 }
 
 
 .text3 {
   text-align: center;
-  font-size: 20px;
+  font-size: 45px;
   font-family: karla;
   letter-spacing: 5px;
-  line-height: 50px;
-  margin-top: -10%;
-  margin-bottom: 10%;
+  line-height: 110px;
+  margin-bottom: 15%; 
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 
 .text4 {
   text-align: center;
-  font-size: 70px;
+  font-size: 50px;
   font-family: karla;
   letter-spacing: 5px;
-  line-height: 130px;
-  margin-top: -10%;
-  margin-bottom: 10%;
+  line-height: 120px;
+  margin-bottom: 19%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
+.text4 a {
+  font-size: 30px;
+  color: #E30641;
+  padding-top: 5%;
+}
 
 /*CONTACT FORM */
 .card {
@@ -269,4 +279,5 @@ footer {
 footer p {
 color: #E30641; 
 font-size: 20px;
+margin-top: -10%;
 }
