--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,13 +61,55 @@ main h1 {
   left: 0;
 }
 
-.events-title h1 {
+.events-main h1 {
   font-family: karla;
   font-size: 120px;
   margin-left: 5%;
   overflow-wrap: anywhere;
   padding-top: 5%;
 
+}
+
+.event-body {
+  background-color: #0A2F43;
+  margin-left: 34%;
+  margin-right: 30%;
+  margin-top: 8.5%;
+  padding-top: 1%;
+}
+
+.event-body .event-card .card {
+  background-color: rgb(39, 104, 140, 0.6);
+  text-align: left;
+  margin-left: 10%;
+  padding-bottom: 5%;
+  padding-left: 5%;
+}
+
+
+
+.event-card .card-title {
+  font-family: karla;
+  color: #0A2F43;
+  background-color: #F2F1EF;
+  border-color: #0A2F43;
+  border: 2px solid; 
+  text-align: left;
+  padding-top: 8%;
+}
+
+
+.event-card .card-body .card-text {
+  font-family: karla;
+  font-size: 14px;
+  color: white;
+  margin-top: -8%;
+}
+
+.event-card .btn {
+  background-color: white;
+  width: 30%;
+  margin-left: 55%;
 }
 
 /*DISCOVER MORE*/
