--- a/styles/styles.css
+++ b/styles/styles.css
@@ -371,60 +371,10 @@ font-size: 20px;
 margin-top: -5%;
 }
 
-/*OVERLAY MENU*/
-.overlay {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-  overflow-x: hidden;
-  transition: 0.5s;
-}
 
-.overlay-content {
-  position: relative;
-  top: 25%;
+/* MENU */
+.navbar {
+  height: 20%;
   width: 100%;
-  text-align: center;
-  margin-top: 30px;
-}
-
-.overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 36px;
-  color: #45B5AA;
-  display: block;
-  transition: 0.3s;
-  font-weight: 500;
-}
-
-.overlay a:hover, .overlay a:focus {
-  color: #7EE1D6;
-}
-
-.overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
-}
-
-.burger {
-  background-color: #E30641; 
-  padding-left: 10%;
-  padding-right: 10%;
-  margin-left: 20%;
+  background-color: none;
 }
