--- a/styles/styles.css
+++ b/styles/styles.css
@@ -360,6 +360,7 @@ input.btn {
 }
 
 /*MEET THE TEAM*/ 
+
 .cover-container .team-header {
   font-size: 90px;
 }
@@ -369,7 +370,7 @@ input.btn {
   font-size: 60px;
   color: #0A2F43; 
   padding-bottom: 5%;
-  margin-top: 42%;
+  margin-top: 35%;
 }
 
 .container-teams {
@@ -386,6 +387,92 @@ input.btn {
   padding-bottom: 2%;
   letter-spacing: 3px;
 }
+
+.teams-main {
+  object-fit: cover; 
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.cover-container h1 {
+  color: #E30641;
+  font-family: karla;
+  font-size: 120px;
+  position: absolute;
+  text-align: left;
+  margin-left: 4%;
+  padding-top: 25%;
+}
+
+.container-teams {
+  margin-top: 15%;
+  text-align: center;
+  font-family: karla;
+}
+
+.container-teams img {
+  width: 430;
+  height: 430;
+  border: solid 2px #0A2F43;
+  margin-top: 5%;
+}
+
+.container-teams .card-body {
+  padding-left: 10%;
+
+}
+
+.container-teams .card-body2 {
+  padding-top: 2%;
+  padding-right: 10%;
+
+}
+
+.container-teams .card-title {
+  color: #E30641;
+  font-size: 35px;
+  text-align: right;
+  padding-bottom: 2%;
+  letter-spacing: 3px;
+}
+
+.container-teams .card-body2 .card-title {
+  color: #E30641;
+  font-size: 35px;
+  text-align: left;
+  padding-bottom: 2%;
+  letter-spacing: 3px;
+}
+
+.container-teams .card-text {
+  font-size: 18px;
+  text-align: justify;
+  letter-spacing: 1px;
+  padding-bottom: 10%;
+
+}
+
+.container-teams .card-body2 .card-text {
+  font-size: 18px;
+  text-align: justify;
+  letter-spacing: 1px;
+}
+
+.teams-main footer p {
+    color: #E30641; 
+    background-color: #0A2F43;
+    text-align: center;
+    font-size: 20px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    }
+    
+  .teams-main footer {
+      margin-top: 8%;
+    }
 
 /* FOOTER */
 footer {
