--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,50 +61,62 @@
   left: 0;
 }
 
-.cover-container h1 {
+.cover-container .event-title {
   color: #E30641;
-  font-family: karla;
-  font-size: 120px;
+  font-family: Zhi Mang Xing;
+  font-size: 80px;
+  letter-spacing: 3px;
   position: absolute;
   text-align: left;
   margin-left: 4%;
-  padding-top: 25%;
+  padding-top: 20%;
 }
 
 .container-events {
-  margin-top: 15%;
+  margin-top: 8%;
   text-align: center;
   font-family: karla;
 }
 
-.intro-events {
+.intro-events h5 {
   font-family: quicksand;
   font-size: 60px;
   color: #0A2F43; 
-  padding-bottom: 5%;
+  padding-bottom: 2%;
   margin-top: 42%;
 }
 
+.intro-events .intro-details {
+  font-family: quicksand;
+  color: #0A2F43; 
+  font-weight: bold;
+  padding-bottom: 5%;
+}
+
 .container-events img {
-  width: 700;
-  height: 700;
+  width: 500;
+  height: 500;
 }
 
 .container-events .card-body {
-  padding-top: 25%;
+  padding-top: 2%;
   padding-left: 10%;
+  padding-bottom: 10%;
+  margin-top: 5%;
 
 }
 
 .container-events .card-body2 {
-  padding-top: 25%;
+  padding-top: 2%;
   padding-right: 10%;
+  padding-bottom: 10%;
+  margin-top: 5%;
 
 }
 
 .container-events .card-title {
   color: #E30641;
-  font-size: 35px;
+  font-size: 30px;
   text-align: right;
   padding-bottom: 2%;
   letter-spacing: 3px;
@@ -112,21 +124,21 @@
 
 .container-events .card-body2 .card-title {
   color: #E30641;
-  font-size: 35px;
+  font-size: 30px;
   text-align: left;
   padding-bottom: 2%;
   letter-spacing: 3px;
 }
 
 .container-events .card-text {
-  font-size: 18px;
+  font-size: 15px;
   text-align: justify;
   letter-spacing: 1px;
 
 }
 
 .container-events .card-body2 .card-text {
-  font-size: 18px;
+  font-size: 15px;
   text-align: justify;
   letter-spacing: 1px;
 }
