--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@
 /*HOME PAGE*/ 
 .video-container {
     height: 100vh;
-    overflow: hidden;
+    /*overflow: hidden;*/
     position: relative;
     @media(min-width: 600px) {
       height: 100vh;
@@ -27,30 +27,43 @@
     left: 0;
   }
 
-.main-title .home-title h1{
+ .home-container .home-title h1{
     color: #E30641;
-    font-size: 140px; 
+    font-size: 95px; 
     font-family: Zhi Mang Xing; 
     text-align: center;
-    margin-left: -150%;
-    margin-top: 25%;
+    display: inline-block;
     position: relative;
+    margin-top: -13%;
 }
 
-  .main-title header .nav {
+
+.home-container .home-footer p {
+  font-family: karla;
+  font-size: 15px;
+  text-align: center;
+  color: #E30641;
+  position: relative;
+  margin-top: 10%;
+}
+
+
+  header .nav {
       position: relative;
-      margin-left: -15%;
-      padding-top: 8%;
+      padding-top: 5%;
+      margin-left: 25%;
+      border: solid 2px black; 
+    
   }
 
-  .main-title header img {
+  header img {
     position: relative;
+    margin-left: 5%;
   }
 
 .nav .nav-link {
       color: #E30641;
   }
-
 
 /*EVENTS*/
 .events-main {
@@ -62,15 +75,15 @@
   left: 0;
 }
 
+
 .cover-container .event-title {
   color: #E30641;
   font-family: Zhi Mang Xing;
   font-size: 80px;
   letter-spacing: 3px;
-  position: absolute;
   text-align: left;
   margin-left: 4%;
-  padding-top: 20%;
+  padding-top: 23%;
 }
 
 .container-events {
@@ -83,8 +96,7 @@
   font-family: quicksand;
   font-size: 60px;
   color: #0A2F43; 
-  padding-bottom: 2%;
-  margin-top: 42%;
+  margin-top: 33%;
 }
 
 .intro-events .intro-details {
@@ -102,12 +114,12 @@
 }
 
 
-
 .container-events img {
   width: 500;
   height: 500;
   border: solid 2px #E30641;
   margin-top: 8%;
+
 }
 
 .container-events .card-body {
@@ -115,7 +127,6 @@
   padding-left: 10%;
   padding-bottom: 10%;
   margin-top: 5%;
-
 }
 
 .container-events .card-body2 {
@@ -233,31 +244,32 @@
 
 /*ABOUT*/
 .about-main header {
-  padding-bottom: 2%;
+  margin-bottom: 15%;
 }
 
 
 .about-main .nav {
-  margin-top: -3%;
   padding-right: 2%;
 }
 
 .cover-container .about-heading1 h1, .cover-container .about-heading2 h1, .cover-container .about-heading3 h1, .cover-container .about-heading4 h1{
   font-family: karla;
   font-size: 75px;
-  font-weight: 600;
+  font-weight: 400;
   letter-spacing: 4px;
   color: #0A2F43;
+  border: solid 2px black; 
 }
 
 .cover-container .about-heading1 h1, .cover-container .about-heading3 h1{
-  margin-top: -22%;
+  margin-top: -30%;
   margin-left: 50%;
+
 }
 
 .cover-container .about-heading2 h1, .cover-container .about-heading4 h1{
   margin-left: 10%;
-  margin-top: -25%;
+  margin-top: -40%;
 }
 
 .about-heading1 img, .about-heading2 img, .about-heading3 img, .about-heading4 img {
