--- a/styles/devices.css
+++ b/styles/devices.css
@@ -10,11 +10,7 @@
 
 
 .home-container .home-footer p {
-  font-family: karla;
   font-size: 15px;
-  text-align: center;
-  color: #E30641;
-  position: relative;
   margin-top: 10%;
 }
 
@@ -175,13 +171,8 @@
     margin-top: -10%;
 }
 
-
 .home-container .home-footer p {
-  font-family: karla;
   font-size: 15px;
-  text-align: center;
-  color: #E30641;
-  position: relative;
   margin-top: 10%;
 }
 
@@ -337,31 +328,30 @@
 @media only screen and (min-width: 768px) {
 /*HOME PAGE*/
 .home-container .home-title h1{
-    font-size: 75px; 
+    font-size: 150px; 
     text-align: center;
-    margin-top: -10%;
+    margin-top: 10%;
 }
 
 
 .home-container .home-footer p {
-  font-family: karla;
-  font-size: 15px;
-  text-align: center;
-  color: #E30641;
-  position: relative;
-  margin-top: 10%;
+  font-size: 30px;
 }
 
    /*EVENTS*/
    .cover-container .event-title {
-    font-size: 60px;
+    font-size: 70px;
     margin-left: 4%;
-    padding-top: 120%;
+    padding-top: 25%;
   }
+
+.cover-container img {
+    height: 35%;
+}
 
   .intro-events h5 {
     font-size: 40px;
-    margin-top: 130%;
+    margin-top: 280px;
   }
   
   .intro-events .intro-details {
@@ -388,8 +378,13 @@
   
 
    /*ABOUT*/
+
+.about-main .nav {
+    padding-bottom: 10%;
+}
+
    .cover-container .about-heading1 h1, .cover-container .about-heading2 h1, .cover-container .about-heading3 h1, .cover-container .about-heading4 h1{
-    font-size: 21px;
+    font-size: 35px;
   }
 
   .about-heading1 img, .about-heading2 img, .about-heading3 img, .about-heading4 img {
@@ -400,7 +395,7 @@
 
 .text1, .text2, .text3, .text4 {
     text-align: center;
-    font-size: 15px; 
+    font-size: 28px; 
     letter-spacing: 2px;
     line-height: 45px;
     margin-left: 2px;
@@ -419,32 +414,34 @@
 
    /*DISCOVER*/
    .discover .cover-container p {
-    font-size: 18px;
+    font-size: 30px;
+    margin-bottom: 10%;
+    margin-left: 5%;
   }
   
   .discover .cover-container h1 {
-    font-size: 30px;
+    font-size: 80px;
   }
   
  
   .cover-container .robot {
-    width: 350;
-    height: 350;
+    width: 500;
+    height: 500;
     margin-top: 15%;
   }
   
   .discover .cover-container .discover-btn {
-    font-size: 18px;
+    font-size: 20px;
   }
 
   .bi {
-    font-size: 10%;
+    font-size: 15%;
   }
 
   .discover .cover-container .discover-people {
       text-align: center;
-      margin-left: 2%;
-      margin-bottom: 20%;
+      margin-left: 5%;
+      margin-bottom: 30%;
   }
 
   .discover .cover-container .discover-events {
@@ -453,10 +450,11 @@
   
    /*TEAM*/
    .cover-container .team-header {
-    font-size: 80px;
-    padding-top: 120%;
-    text-align: right;
-    margin-left: 20%;
+    font-size:70px;
+    padding-top: 25%;
+    text-align: left;
+    margin-right: 50%;
+    margin-left: 5%;
   }
 
   .container-teams img {
@@ -466,8 +464,8 @@
 
   
   .intro-teams {
-    font-size: 30px;
-    padding-top: 85%;
+    font-size: 40px;
+    padding-top: 0%;
   }
 
   .container-teams .card-title {
@@ -504,31 +502,30 @@
 @media only screen and (min-width: 992px) {
   /*HOME PAGE*/
   .home-container .home-title h1{
-    font-size: 75px; 
+    font-size: 120px; 
     text-align: center;
     margin-top: -10%;
 }
 
 
 .home-container .home-footer p {
-  font-family: karla;
-  font-size: 15px;
-  text-align: center;
-  color: #E30641;
-  position: relative;
-  margin-top: 10%;
+  font-size: 20px;
 }
 
    /*EVENTS*/
+   .cover-container img {
+    height: 100%;
+}
+
    .cover-container .event-title {
-    font-size: 60px;
+    font-size: 80px;
     margin-left: 4%;
-    padding-top: 120%;
   }
 
   .intro-events h5 {
     font-size: 40px;
-    margin-top: 130%;
+    padding-top: 20%;
+    
   }
   
   .intro-events .intro-details {
@@ -542,8 +539,8 @@
   }
 
   .container-events img {
-    width: 350;
-    height: 350;
+    width: 500;
+    height: 500;
     margin-top: 8%;
   }
 
@@ -556,27 +553,27 @@
 
    /*ABOUT*/
    .cover-container .about-heading1 h1, .cover-container .about-heading2 h1, .cover-container .about-heading3 h1, .cover-container .about-heading4 h1{
-    font-size: 21px;
+    font-size: 45px;
   }
 
   .about-heading1 img, .about-heading2 img, .about-heading3 img, .about-heading4 img {
-    height:50%;
+    height:60%;
     width: 100%;
   }
 
 
 .text1, .text2, .text3, .text4 {
     text-align: center;
-    font-size: 15px; 
+    font-size: 35px; 
     letter-spacing: 2px;
-    line-height: 45px;
+    line-height: 55px;
     margin-left: 2px;
     max-width: auto;
   }
 
 
 .text4 a {
-    font-size: 20px;
+    font-size: 25px;
   }
   
   .about-main footer p {
@@ -586,22 +583,22 @@
 
    /*DISCOVER*/
    .discover .cover-container p {
-    font-size: 18px;
+    font-size: 30px;
   }
   
   .discover .cover-container h1 {
-    font-size: 30px;
+    font-size: 70px;
   }
   
  
   .cover-container .robot {
-    width: 350;
-    height: 350;
-    margin-top: 15%;
+    width: 400;
+    height: 400;
+    margin-top: -38%;
   }
   
   .discover .cover-container .discover-btn {
-    font-size: 18px;
+    font-size: 23px;
   }
 
   .bi {
@@ -610,8 +607,9 @@
 
   .discover .cover-container .discover-people {
       text-align: center;
-      margin-left: 2%;
+      margin-left: 20%;
       margin-bottom: 20%;
+      margin-top: -21%;
   }
 
   .discover .cover-container .discover-events {
@@ -669,167 +667,6 @@
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
-/*HOME PAGE*/
-.home-container .home-title h1{
-    font-size: 75px; 
-    text-align: center;
-    margin-top: -10%;
-}
 
-
-.home-container .home-footer p {
-  font-family: karla;
-  font-size: 15px;
-  text-align: center;
-  color: #E30641;
-  position: relative;
-  margin-top: 10%;
-}
-
-   /*EVENTS*/
-   .cover-container .event-title {
-    font-size: 60px;
-    margin-left: 4%;
-    padding-top: 120%;
-  }
-
-  .intro-events h5 {
-    font-size: 40px;
-    margin-top: 130%;
-  }
-  
-  .intro-events .intro-details {
-    padding-bottom: 5%;
-    padding-left: 5%; 
-    padding-right: 5%;
-  }
-  
-  .container-events .intro-details h4 {
-    font-size: 30px;
-  }
-
-  .container-events img {
-    width: 350;
-    height: 350;
-    margin-top: 8%;
-  }
-
-  .container-events .card-body, .card-body2 {
-    padding-left: 5%;
-    padding-right: 5%;
-    text-align: center;
-  }
-  
-
-   /*ABOUT*/
-   .cover-container .about-heading1 h1, .cover-container .about-heading2 h1, .cover-container .about-heading3 h1, .cover-container .about-heading4 h1{
-    font-size: 21px;
-  }
-
-  .about-heading1 img, .about-heading2 img, .about-heading3 img, .about-heading4 img {
-    height:50%;
-    width: 100%;
-  }
-
-
-.text1, .text2, .text3, .text4 {
-    text-align: center;
-    font-size: 15px; 
-    letter-spacing: 2px;
-    line-height: 45px;
-    margin-left: 2px;
-    max-width: auto;
-  }
-
-
-.text4 a {
-    font-size: 20px;
-  }
-  
-  .about-main footer p {
-    font-size: 15px;
-    }
-
-
-   /*DISCOVER*/
-   .discover .cover-container p {
-    font-size: 18px;
-  }
-  
-  .discover .cover-container h1 {
-    font-size: 30px;
-  }
-  
- 
-  .cover-container .robot {
-    width: 350;
-    height: 350;
-    margin-top: 15%;
-  }
-  
-  .discover .cover-container .discover-btn {
-    font-size: 18px;
-  }
-
-  .bi {
-    font-size: 10%;
-  }
-
-  .discover .cover-container .discover-people {
-      text-align: center;
-      margin-left: 2%;
-      margin-bottom: 20%;
-  }
-
-  .discover .cover-container .discover-events {
-      text-align: center;
-  }
-  
-   /*TEAM*/
-   .cover-container .team-header {
-    font-size: 80px;
-    padding-top: 120%;
-    text-align: right;
-    margin-left: 20%;
-  }
-
-  .container-teams img {
-    width: 350;
-    height: 350;
-  }
-
-  
-  .intro-teams {
-    font-size: 30px;
-    padding-top: 85%;
-  }
-
-  .container-teams .card-title {
-    font-size: 30px;
-    text-align: center;
-  }
- 
-  .container-teams .card-body2 .card-title {
-    font-size: 30px;
-    text-align: center;
-  }
-  
-  .container-teams .card-text {
-    font-size: 15px;  
-    padding-left: 1%;
-    padding-right: 1%;
-    text-align: justify;
-  }
-  
-  .container-teams .card-body2 .card-text {
-    font-size: 15px;
-    padding-left: 1%;
-    padding-right: 1%;
-    text-align: justify;
-  }
-
-  .teams-main footer p {
-    font-size: 15px;
-    }
 
 }
