--- a/styles/devices.css
+++ b/styles/devices.css
@@ -618,42 +618,41 @@
   
    /*TEAM*/
    .cover-container .team-header {
-    font-size: 80px;
-    padding-top: 120%;
-    text-align: right;
-    margin-left: 20%;
+    font-size: 120px;
+    padding-top: 20%;
+    text-align: left;
   }
 
   .container-teams img {
-    width: 350;
-    height: 350;
+    width: 490; 
+    height: 490;
   }
 
   
   .intro-teams {
-    font-size: 30px;
-    padding-top: 85%;
+    font-size: 40px;
+    padding-top: 5%;
   }
 
   .container-teams .card-title {
-    font-size: 30px;
+    font-size: 35px;
     text-align: center;
   }
  
   .container-teams .card-body2 .card-title {
-    font-size: 30px;
+    font-size: 35px;
     text-align: center;
   }
   
   .container-teams .card-text {
-    font-size: 15px;  
+    font-size: 18px;  
     padding-left: 1%;
     padding-right: 1%;
     text-align: justify;
   }
   
   .container-teams .card-body2 .card-text {
-    font-size: 15px;
+    font-size: 18px;
     padding-left: 1%;
     padding-right: 1%;
     text-align: justify;
