--- a/styles/devices.css
+++ b/styles/devices.css
@@ -160,6 +160,33 @@
     font-size: 15px;
     }
 
+
+     /*CONTACT*/
+     .card {
+      padding: 12%;
+      padding-bottom: 10%;
+      padding-top: 5%;
+      background-color: #0A2F43;
+      border-radius: 2%;
+      margin-top: 8%;
+    }
+    
+    .card h4{
+      font-family: karla;
+      color: white;
+      text-transform: uppercase;
+      font-size: 30px;
+    }
+
+    #e-mail {
+      height: 40px;
+    }
+    
+    #message {
+      height: 70px;
+    }
+
+
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -495,6 +522,31 @@
   .teams-main footer p {
     font-size: 15px;
     }
+
+     /*CONTACT*/
+     .card {
+      padding: 18%;
+      padding-bottom: 10%;
+      padding-top: 5%;
+      background-color: #0A2F43;
+      border-radius: 2%;
+      margin-top: 50%;
+    }
+    
+    .card h4{
+      font-family: karla;
+      color: white;
+      text-transform: uppercase;
+      font-size: 50px;
+    }
+
+    #e-mail {
+      height: 40px;
+    }
+    
+    #message {
+      height: 150px;
+    }
  
 }
 
@@ -666,5 +718,174 @@
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+    /*HOME PAGE*/
+    .home-container .home-title h1{
+      font-size: 120px; 
+      text-align: center;
+      margin-top: -15%;
+  }
+  
+  
+  .home-container .home-footer p {
+    font-size: 18px;
+    margin-top: 2%;
+  }
+  
+     /*EVENTS*/
+     .cover-container img {
+      height: 100%;
+  }
+  
+     .cover-container .event-title {
+      font-size: 80px;
+      margin-left: 4%;
+      margin-top: -3%;
+    }
+  
+    .intro-events h5 {
+      font-size: 40px;
+      padding-top: 10%;
+      
+    }
+    
+    .intro-events .intro-details {
+      padding-bottom: 5%;
+      padding-left: 5%; 
+      padding-right: 5%;
+    }
+    
+    .container-events .intro-details h4 {
+      font-size: 30px;
+    }
+  
+    .container-events img {
+      width: 500;
+      height: 500;
+      margin-top: 8%;
+    }
+  
+    .container-events .card-body, .card-body2 {
+      padding-left: 5%;
+      padding-right: 5%;
+      text-align: center;
+    }
+    
+  
+     /*ABOUT*/
+     .cover-container .about-heading1 h1, .cover-container .about-heading2 h1, .cover-container .about-heading3 h1, .cover-container .about-heading4 h1{
+      font-size: 60px;
+    }
+  
+    .about-heading1 img, .about-heading2 img, .about-heading3 img, .about-heading4 img {
+      height:60%;
+      width: 100%;
+    }
+  
+  
+  .text1, .text2, .text3, .text4 {
+      text-align: center;
+      font-size: 35px; 
+      letter-spacing: 2px;
+      line-height: 55px;
+      margin-left: 2px;
+      max-width: auto;
+    }
+  
+  
+  .text4 a {
+      font-size: 25px;
+    }
+    
+    .about-main footer p {
+      font-size: 15px;
+      }
+  
+  
+     /*DISCOVER*/
+     .discover .cover-container p {
+      font-size: 30px;
+    }
+    
+    .discover .cover-container h1 {
+      font-size: 70px;
+    }
+    
+   
+    .cover-container .robot {
+      width: 350;
+      height: 350;
+      margin-top: -25%;
+    }
+    
+    .discover .cover-container .discover-btn {
+      font-size: 23px;
+    }
+  
+    .bi {
+      font-size: 10%;
+    }
+  
+    .discover .cover-container .discover-people {
+        text-align: center;
+        margin-left: 20%;
+        margin-bottom: 20%;
+        margin-top: -30%;
+    }
+  
+    .discover .cover-container .discover-events {
+        text-align: center;
+        margin-top: -40%;
+      }
+    }
+    
+     /*TEAM*/
+     .cover-container .team-header {
+      font-size: 120px;
+      padding-top: 15%;
+      text-align: left;
+    }
+  
+    .container-teams img {
+      width: 490; 
+      height: 490;
+    }
+  
+    
+    .intro-teams {
+      font-size: 45px;
+      margin-top: 20%;
+    }
+  
+    .container-teams .card-title {
+      font-size: 35px;
+      text-align: center;
+    }
+   
+    .container-teams .card-body2 .card-title {
+      font-size: 35px;
+      text-align: center;
+    }
+    
+    .container-teams .card-text {
+      font-size: 18px;  
+      padding-left: 1%;
+      padding-right: 1%;
+      text-align: justify;
+    }
+    
+    .container-teams .card-body2 .card-text {
+      font-size: 18px;
+      padding-left: 1%;
+      padding-right: 1%;
+      text-align: justify;
+    }
+
+    .container-teams .card-body, .card-body2 {
+      padding-top: 15%;
+    }
+  
+    .teams-main footer p {
+      font-size: 15px;
+      }
 
 }
