--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@
     }
   }
   
-  video {
+ .video-container video {
     object-fit: cover; 
     position: absolute;
     height: 100%;
@@ -371,11 +371,9 @@
 }
 
 .card {
-  padding: 15%;
-  padding-top: 12px;
-  padding-bottom: 10%;
-  margin-top: 48px;
-  margin-bottom: 10px;
+  padding: 10%;
+  padding-bottom: 2%;
+  padding-top: 5%;
   background-color: #0A2F43;
   border-radius: 2%;
 }
@@ -384,7 +382,7 @@
   font-family: karla;
   color: white;
   text-transform: uppercase;
-  font-size: 45px;
+  font-size: 40px;
 }
 
 .mb-1 {
@@ -397,11 +395,11 @@ textarea[name="message"] {
 }
 
 #e-mail {
-  height: 45px;
+  height: 40px;
 }
 
 #message {
-  height: 120px;
+  height: 100px;
 }
 
 input.input-box,
