--- a/styles/devices.css
+++ b/styles/devices.css
@@ -888,4 +888,24 @@
       font-size: 15px;
       }
 
+      /*CONTACT*/
+
+.card {
+  padding: 10%;
+  padding-bottom: 2%;
+  padding-top: 5%;
+}
+
+.card h4{
+  font-size: 40px;
+}
+
+
+#e-mail {
+  height: 40px;
+}
+
+#message {
+  height: 100px;
+}
 }
