--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@
  .home-container .home-title h1{
     color: #E30641;
     font-size: 95px; 
-    font-family: Zhi Mang Xing; 
+    font-family: karla; 
     text-align: center;
     display: inline-block;
     position: relative;
@@ -569,6 +569,62 @@ footer p {
 color: #E30641; 
 font-size: 20px;
 margin-top: -5%;
+}
+
+/*MENU*/ 
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+header span {
+  position: relative;
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
 }
 
 
